fix auto add listview in Engineering mode. but some bug still, e.g. input dialog.

--- a/app/src/main/res/layout/engineering_item.xml
+++ b/app/src/main/res/layout/engineering_item.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:paddingTop="20dp"
     android:paddingBottom="20dp"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:weightSum="1">
 
     <TextView
         android:id="@+id/text_view"
@@ -17,9 +18,8 @@
     <EditText
         android:id="@+id/edit_text"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
         android:background="@drawable/shape_edittext"/>
 
 </LinearLayout>
