--- a/app/src/main/res/layout/engineering_item.xml
+++ b/app/src/main/res/layout/engineering_item.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
@@ -18,7 +18,7 @@
     <EditText
         android:id="@+id/edit_text"
         android:layout_gravity="center_vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="35dp"
         android:background="@drawable/shape_edittext"/>
 
