--- a/app/src/main/res/layout/fragment_engineering_mode.xml
+++ b/app/src/main/res/layout/fragment_engineering_mode.xml
@@ -13,16 +13,17 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         />
-<!--
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Command_Reset"
+        android:textSize="24sp"
         android:id="@+id/id_Reset_button"
         android:clickable="true"
         android:onClick="onButtonReset"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp" />
--->
+        android:layout_below="@id/Engineering_listView"
+        />
+
 </RelativeLayout>
